# opengl-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
